hphp/hack/test/typecheck/async_hint5.php
<?hh

// Testing lambda
async function foo() {
  $nohint = async $x ==> await $x + 1;
  throw new Exception();
}
